--- a/Graphics2/Graphics2.vcxproj
+++ b/Graphics2/Graphics2.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="CubeNode.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="DirectXCore.h" />
+    <ClInclude Include="FastNoise.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="DirectXFramework.h" />
     <ClInclude Include="Graphics2.h" />
@@ -195,6 +196,7 @@
   <ItemGroup>
     <ClCompile Include="CameraNode.cpp" />
     <ClCompile Include="CubeNode.cpp" />
+    <ClCompile Include="FastNoise.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="DirectXFramework.cpp" />
     <ClCompile Include="Graphics2.cpp" />
