--- a/Graphics2/Graphics2.vcxproj
+++ b/Graphics2/Graphics2.vcxproj
@@ -165,7 +165,6 @@
     <ClInclude Include="CubeNode.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="DirectXCore.h" />
-    <ClInclude Include="FastNoise.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="DirectXFramework.h" />
     <ClInclude Include="Graphics2.h" />
@@ -182,6 +181,7 @@
     <ClInclude Include="SceneGraph.h" />
     <ClInclude Include="SceneNode.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="PlanetNode.h" />
     <ClInclude Include="Texture2D.h" />
@@ -198,7 +198,6 @@
   <ItemGroup>
     <ClCompile Include="CameraNode.cpp" />
     <ClCompile Include="CubeNode.cpp" />
-    <ClCompile Include="FastNoise.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="DirectXFramework.cpp" />
     <ClCompile Include="Graphics2.cpp" />
@@ -212,6 +211,7 @@
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="PlanetNode.cpp" />
+    <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="Texture2D.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="WICTextureLoader.cpp" />
